fix: update bottom arrow position in BottomEditPenComponent; adjust bottom spacing to 10rem fix: update production API URL in environment configuration

--- a/frontend/mysell/src/app/components/bottom-edit-pen/bottom-edit-pen.component.scss
+++ b/frontend/mysell/src/app/components/bottom-edit-pen/bottom-edit-pen.component.scss
@@ -8,7 +8,7 @@
 .bottom-arrow {
   transition: transform 0.3s ease-in-out;
   position: absolute;
-  bottom: 4rem;
+  bottom: 10rem;
 }
 button {
   justify-content: center;
